# binancecpp

./: .clang-format  .cppcheck  .gitignore  CMakeLists.txt  CMakePresets.json  IMPLEMENTATION_COMPLETE.md  INSTALL.md  LICENSE  README.md  RESTRUCTURE_SUMMARY.md  TODO.md  test_api_structure  test_api_structure.cpp  test_modular.cpp  test_new_structure.cpp  vcpkg.json
.github/workflows/: ci.yml
cmake/: ExamplesCMakeLists.txt.in  binancecppConfig.cmake.in
example/: CMakeLists.txt  example.cpp  example_aggTrades.cpp  example_depthCache.cpp  example_klines.cpp  example_template.cpp  example_userStream.cpp  example_wapi.cpp
scripts/: check-all-quality.sh  check-coding-standards.sh  format.sh  lint.sh
src/: CMakeLists.txt  README_MODULAR.md  binacpp.cpp  binacpp.h  binacpp_logger.cpp  binacpp_logger.h  binacpp_modular.cpp  binacpp_utils.cpp  binacpp_utils.h  binacpp_websocket.cpp  binacpp_websocket.h  binance.cpp  binance.h  binance_cpp.h  binance_legacy.h  binance_logger.cpp  binance_logger.h  binance_utils.cpp  binance_utils.h  binance_websocket.cpp  binance_websocket.h  readme.txt
src/account/: get_account.cpp  get_myTrades.cpp
src/core/: binance_api.cpp
src/financial_trading/: algo_trading.h  copy_trading.h  derivatives_trading.h  margin_trading.h  spot_trading.h  wallet.h
src/financial_trading/spot_trading/account_endpoints/: get_account_information.cpp  get_account_trade_list.cpp
src/financial_trading/spot_trading/general_endpoints/: exchange_information.cpp  get_exchange_info.cpp  get_system_status.cpp  server_time.cpp  test_connectivity.cpp
src/financial_trading/spot_trading/market_data_endpoints/: current_prices.cpp  get_24hr_ticker_price_change_statistics_all.cpp  get_24hr_ticker_price_change_statistics_with_symbol.cpp  get_aggregate_trades_list.cpp  get_klines_candlestick_data.cpp  get_price.cpp  get_rolling_window_price_change_statistics_all.cpp  get_rolling_window_price_change_statistics_with_symbol.cpp  get_symbol_order_book_ticker_all.cpp  get_symbol_order_book_ticker_with_symbol.cpp  get_symbol_price_ticker_all.cpp  get_symbol_price_ticker_with_symbol.cpp  order_book.cpp
src/financial_trading/spot_trading/user_data_stream_endpoints/: close_listen_key.cpp  create_listen_key.cpp  ping_extend_listen_key.cpp  user_data_stream.cpp
src/financial_trading/wallet/: deposit_operations.cpp  withdraw_operations.cpp
src/initialization/: cleanup.cpp  init.cpp
src/market_data/: get_24hr.cpp  get_aggTrades.cpp  get_allBookTickers.cpp  get_allPrices.cpp  get_bookTicker.cpp  get_depth.cpp  get_exchangeInfo.cpp  get_klines.cpp  get_price.cpp  get_serverTime.cpp
src/trading/: cancel_order.cpp  get_openOrders.cpp  send_order.cpp
src/user_stream/: start_userDataStream.cpp
src/utils/: curl_utils.cpp
src/wallet/: get_depositAddress.cpp  get_depositHistory.cpp  get_withdrawHistory.cpp  withdraw.cpp
